[gd_scene load_steps=3 format=3 uid="uid://b0tvau6igvmf0"]

[ext_resource type="Script" path="res://ui/combat/discard_item_inventory/discard_item_inventory.gd" id="1_7c36g"]
[ext_resource type="PackedScene" uid="uid://cxd4y8qg56hq3" path="res://ui/combat/shared/unit_inventory_slot/unit_inventory_slot.tscn" id="2_ay6sm"]

[node name="DiscardItemInventory" type="Control"]
custom_minimum_size = Vector2(325, 600)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -827.0
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_7c36g")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(325, 600)
layout_mode = 2
offset_right = 325.0
offset_bottom = 600.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VboxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="PanelContainer/MarginContainer/VboxContainer"]
layout_mode = 2

[node name="Header" type="Label" parent="PanelContainer/MarginContainer/VboxContainer/PanelContainer2"]
layout_mode = 2
text = "Select an Item to Discard"

[node name="InventoryPanel" type="PanelContainer" parent="PanelContainer/MarginContainer/VboxContainer"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/MarginContainer/VboxContainer/InventoryPanel"]
layout_mode = 2

[node name="Inventory" type="VBoxContainer" parent="PanelContainer/MarginContainer/VboxContainer/InventoryPanel/CenterContainer"]
layout_mode = 2

[node name="UnitInventorySlot" parent="PanelContainer/MarginContainer/VboxContainer/InventoryPanel/CenterContainer/Inventory" instance=ExtResource("2_ay6sm")]
layout_mode = 2
mouse_filter = 0

[node name="UnitInventorySlot2" parent="PanelContainer/MarginContainer/VboxContainer/InventoryPanel/CenterContainer/Inventory" instance=ExtResource("2_ay6sm")]
layout_mode = 2

[node name="UnitInventorySlot3" parent="PanelContainer/MarginContainer/VboxContainer/InventoryPanel/CenterContainer/Inventory" instance=ExtResource("2_ay6sm")]
layout_mode = 2

[node name="UnitInventorySlot4" parent="PanelContainer/MarginContainer/VboxContainer/InventoryPanel/CenterContainer/Inventory" instance=ExtResource("2_ay6sm")]
layout_mode = 2

[node name="UnitInventorySlot5" parent="PanelContainer/MarginContainer/VboxContainer/InventoryPanel/CenterContainer/Inventory" instance=ExtResource("2_ay6sm")]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VboxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VboxContainer/VBoxContainer"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/MarginContainer/VboxContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VboxContainer/VBoxContainer/PanelContainer/CenterContainer"]
layout_mode = 2
text = "<- In-Use Stats ->
"

[node name="MarginContainer" type="CenterContainer" parent="PanelContainer/MarginContainer/VboxContainer/VBoxContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="PanelContainer/MarginContainer/VboxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 0
columns = 3

[node name="Mag_Atk_Rec" type="HBoxContainer" parent="PanelContainer/MarginContainer/VboxContainer/VBoxContainer/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VboxContainer/VBoxContainer/MarginContainer/GridContainer/Mag_Atk_Rec"]
layout_mode = 2
text = "Atk"

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VboxContainer/VBoxContainer/MarginContainer/GridContainer/Mag_Atk_Rec"]
layout_mode = 2
text = "--"

[node name="Hit" type="HBoxContainer" parent="PanelContainer/MarginContainer/VboxContainer/VBoxContainer/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VboxContainer/VBoxContainer/MarginContainer/GridContainer/Hit"]
layout_mode = 2
text = "Hit"

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VboxContainer/VBoxContainer/MarginContainer/GridContainer/Hit"]
layout_mode = 2
text = "--"

[node name="Crit" type="HBoxContainer" parent="PanelContainer/MarginContainer/VboxContainer/VBoxContainer/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VboxContainer/VBoxContainer/MarginContainer/GridContainer/Crit"]
layout_mode = 2
text = "Crit
"

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VboxContainer/VBoxContainer/MarginContainer/GridContainer/Crit"]
layout_mode = 2
text = "--"

[node name="Spd" type="HBoxContainer" parent="PanelContainer/MarginContainer/VboxContainer/VBoxContainer/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VboxContainer/VBoxContainer/MarginContainer/GridContainer/Spd"]
layout_mode = 2
text = "Spd"

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VboxContainer/VBoxContainer/MarginContainer/GridContainer/Spd"]
layout_mode = 2
text = "--"

[node name="Avo" type="HBoxContainer" parent="PanelContainer/MarginContainer/VboxContainer/VBoxContainer/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VboxContainer/VBoxContainer/MarginContainer/GridContainer/Avo"]
layout_mode = 2
text = "Avo"

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VboxContainer/VBoxContainer/MarginContainer/GridContainer/Avo"]
layout_mode = 2
text = "--"

[node name="Ddg" type="HBoxContainer" parent="PanelContainer/MarginContainer/VboxContainer/VBoxContainer/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VboxContainer/VBoxContainer/MarginContainer/GridContainer/Ddg"]
layout_mode = 2
text = "Ddg"

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VboxContainer/VBoxContainer/MarginContainer/GridContainer/Ddg"]
layout_mode = 2
text = "--"

[node name="Eff" type="HBoxContainer" parent="PanelContainer/MarginContainer/VboxContainer/VBoxContainer/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VboxContainer/VBoxContainer/MarginContainer/GridContainer/Eff"]
layout_mode = 2
text = "Eff"

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VboxContainer/VBoxContainer/MarginContainer/GridContainer/Eff"]
layout_mode = 2
text = "--"

[node name="Rng" type="HBoxContainer" parent="PanelContainer/MarginContainer/VboxContainer/VBoxContainer/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VboxContainer/VBoxContainer/MarginContainer/GridContainer/Rng"]
layout_mode = 2
text = "Rng"

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VboxContainer/VBoxContainer/MarginContainer/GridContainer/Rng"]
layout_mode = 2
text = "1-2
"

[node name="Lvl" type="HBoxContainer" parent="PanelContainer/MarginContainer/VboxContainer/VBoxContainer/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VboxContainer/VBoxContainer/MarginContainer/GridContainer/Lvl"]
layout_mode = 2
text = "Lvl
"

[node name="Label2" type="HBoxContainer" parent="PanelContainer/MarginContainer/VboxContainer/VBoxContainer/MarginContainer/GridContainer/Lvl"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/VboxContainer/VBoxContainer/MarginContainer/GridContainer/Lvl/Label2"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VboxContainer/VBoxContainer/MarginContainer/GridContainer/Lvl/Label2"]
layout_mode = 2
text = "D"

[node name="Description" type="PanelContainer" parent="PanelContainer/MarginContainer/VboxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="RichTextLabel" parent="PanelContainer/MarginContainer/VboxContainer/VBoxContainer/Description"]
layout_mode = 2
text = "Some random description goes here that maybe should be sufficiently long"
fit_content = true

[connection signal="btn_entered" from="PanelContainer/MarginContainer/VboxContainer/InventoryPanel/CenterContainer/Inventory/UnitInventorySlot" to="." method="btn_entered"]
[connection signal="btn_entered" from="PanelContainer/MarginContainer/VboxContainer/InventoryPanel/CenterContainer/Inventory/UnitInventorySlot2" to="." method="btn_entered"]
[connection signal="btn_entered" from="PanelContainer/MarginContainer/VboxContainer/InventoryPanel/CenterContainer/Inventory/UnitInventorySlot3" to="." method="btn_entered"]
[connection signal="btn_entered" from="PanelContainer/MarginContainer/VboxContainer/InventoryPanel/CenterContainer/Inventory/UnitInventorySlot4" to="." method="btn_entered"]
[connection signal="btn_entered" from="PanelContainer/MarginContainer/VboxContainer/InventoryPanel/CenterContainer/Inventory/UnitInventorySlot5" to="." method="btn_entered"]
